src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <encrypted>true</encrypted>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <encrypted>true</encrypted>
        <label>Community</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_19th_Birthday__c</fullName>
        <formula>DATE(YEAR(PersonBirthdate) + 19, Month(PersonBirthdate), Day(PersonBirthdate))-today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to 19th Birthday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_same_as_Physical_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing Address same as Physical Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_custom__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <encrypted>true</encrypted>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_BIRTHDATE</columns>
        <columns>IS_PERSON_ACCOUNT</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Primary_Contact_Indicator__pc</columns>
        <filterScope>Everything</filterScope>
        <label>All Individuals</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>false</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>At_least_one_phone_number</fullName>
        <active>true</active>
        <description>only for person accounts</description>
        <errorConditionFormula>AND( IsPersonAccount, ISBLANK(PersonOtherPhone), ISBLANK(PersonMobilePhone), ISBLANK(PersonHomePhone), ISBLANK( PersonMobilePhone), ISBLANK( Cell_Phone__c ), ISBLANK( Work_Phone__c ))</errorConditionFormula>
        <errorMessage>Please specify at least one phone number for the individual</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postal_Code_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(PersonOtherPostalCode,&quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;))</errorConditionFormula>
        <errorDisplayField>PersonOtherPostalCode</errorDisplayField>
        <errorMessage>Please enter the Postal Code in the format: A1A1A1 or A1A 1A1, where A is a letter and 1 is a digit.</errorMessage>
    </validationRules>
</CustomObject>